[B]Version 1.1.101[/B]
- Americass - fix playback
- SextB - fix playback
- kissjav - domain change
- nonktube - fix listing, add categories menu