@@ -3,3 +3,4 @@
 - SextB - fix playback
 - kissjav - domain change
 - nonktube - fix listing, add categories menu
+- porno1 - fix playback
